--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -51,7 +51,6 @@ ignore = "0.4"
 either = "1.6"
 tar = "0.4"
 flate2 = "1.0"
-tinyfiledialogs = "3.3"
 http = "0.2"
 state = "0.4"
 bincode = "1.3"
@@ -80,7 +79,7 @@ shared_child = { version = "0.3", optional = true }
 os_pipe = { version = "0.9", optional = true }
 
 # Dialogs
-rfd = { version = "0.3", optional = true }
+rfd = "0.4"
 
 # Updater
 minisign-verify = { version = "0.1", optional = true }
@@ -127,8 +126,8 @@ shell-all = [ "shell-open", "shell-execute" ]
 shell-execute = [ "shared_child", "os_pipe" ]
 shell-open = [ "open" ]
 dialog-all = [ "dialog-open", "dialog-save" ]
-dialog-open = [ "rfd" ]
-dialog-save = [ "rfd" ]
+dialog-open = [ ]
+dialog-save = [ ]
 http-all = [ ]
 http-request = [ ]
 notification-all = [ "notify-rust" ]
