--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -31,13 +31,21 @@ jobs:
           components: rust-src
           target: ${{ matrix.platform.target }}
 
+      - name: setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.x"
+          architecture: x64
+
       - name: install depedencies
         run: |
+          python -m pip install --upgrade pip
           sudo apt-get update
           sudo apt-get install -y webkit2gtk-4.0 libgtksourceview-3.0-dev libappindicator3-dev xvfb
           wget https://github.com/sharkdp/hyperfine/releases/download/v1.11.0/hyperfine_1.11.0_amd64.deb
           sudo dpkg -i hyperfine_1.11.0_amd64.deb
-        
+          pip install memory_profiler
+
       - name: Get current date
         run: echo "CURRENT_DATE=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
 
