--- a/tooling/bundler/Cargo.toml
+++ b/tooling/bundler/Cargo.toml
@@ -51,7 +51,7 @@ sha2 = "0.9"
 hex = "0.4"
 
 [target."cfg(target_os = \"macos\")".dependencies]
-chrono = "0.4"
+time = { version = "0.3", features = ["formatting"] }
 dirs-next = "2.0"
 
 [target."cfg(target_os = \"linux\")".dependencies]
