--- a/core/tauri-codegen/Cargo.toml
+++ b/core/tauri-codegen/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tauri-codegen"
-version = "1.0.0-beta.4"
+version = "1.0.0-rc.0"
 authors = [ "Tauri Programme within The Commons Conservancy" ]
 categories = [ "gui", "web-programming" ]
 license = "Apache-2.0 OR MIT"
@@ -20,7 +20,7 @@ proc-macro2 = "1"
 quote = "1"
 serde = { version = "1", features = [ "derive" ] }
 serde_json = "1"
-tauri-utils = { version = "1.0.0-beta.3", path = "../tauri-utils", features = [ "build" ] }
+tauri-utils = { version = "1.0.0-rc.0", path = "../tauri-utils", features = [ "build" ] }
 thiserror = "1"
 walkdir = "2"
 zstd = { version = "0.10", optional = true }
@@ -30,6 +30,6 @@ uuid = { version = "0.8", features = [ "v4" ] }
 [features]
 default = [ "compression" ]
 compression = [ "zstd", "tauri-utils/compression" ]
-isolation = ["tauri-utils/isolation"]
-shell-scope = ["regex"]
+isolation = [ "tauri-utils/isolation" ]
+shell-scope = [ "regex" ]
 config-json5 = [ "tauri-utils/config-json5" ]
