--- a/core/tauri-runtime-wry/Cargo.toml
+++ b/core/tauri-runtime-wry/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tauri-runtime-wry"
-version = "0.2.1"
+version = "0.3.0"
 authors = [ "Tauri Programme within The Commons Conservancy" ]
 categories = [ "gui", "web-programming" ]
 license = "Apache-2.0 OR MIT"
@@ -14,8 +14,8 @@ readme = "README.md"
 
 [dependencies]
 wry = { version = "0.13.1", default-features = false, features = [ "file-drop", "protocol" ] }
-tauri-runtime = { version = "0.2.1", path = "../tauri-runtime" }
-tauri-utils = { version = "1.0.0-beta.3", path = "../tauri-utils" }
+tauri-runtime = { version = "0.3.0", path = "../tauri-runtime" }
+tauri-utils = { version = "1.0.0-rc.0", path = "../tauri-utils" }
 uuid = { version = "0.8.2", features = [ "v4" ] }
 infer = "0.4"
 
@@ -23,11 +23,9 @@ infer = "0.4"
 ico = "0.1"
 webview2-com = "0.11.0"
 
-[target."cfg(windows)".dependencies.windows]
-version = "0.30.0"
-features = [
-  "Win32_Foundation",
-]
+  [target."cfg(windows)".dependencies.windows]
+  version = "0.30.0"
+  features = [ "Win32_Foundation" ]
 
 [target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
 png = "0.16"
@@ -37,4 +35,8 @@ gtk = { version = "0.15", features = [ "v3_20" ] }
 dox = [ "wry/dox" ]
 devtools = [ "wry/devtool", "tauri-runtime/devtools" ]
 system-tray = [ "wry/tray", "tauri-runtime/system-tray" ]
-macos-private-api = [ "wry/fullscreen", "wry/transparent", "tauri-runtime/macos-private-api" ]
+macos-private-api = [
+  "wry/fullscreen",
+  "wry/transparent",
+  "tauri-runtime/macos-private-api"
+]
