--- a/core/tauri-utils/Cargo.toml
+++ b/core/tauri-utils/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tauri-utils"
-version = "1.0.0-beta.3"
+version = "1.0.0-rc.0"
 authors = [ "Tauri Programme within The Commons Conservancy" ]
 license = "Apache-2.0 OR MIT"
 homepage = "https://tauri.studio"
@@ -22,10 +22,10 @@ kuchiki = "0.8"
 html5ever = "0.25"
 proc-macro2 = { version = "1.0", optional = true }
 quote = { version = "1.0", optional = true }
-schemars = { version = "0.8", features = ["url"], optional = true }
+schemars = { version = "0.8", features = [ "url" ], optional = true }
 serde_with = "1.12"
 aes-gcm = { version = "0.9", optional = true }
-ring = { version = "0.16", optional = true, features = ["std"] }
+ring = { version = "0.16", optional = true, features = [ "std" ] }
 once_cell = { version = "1.9", optional = true }
 serialize-to-javascript = "=0.1.1"
 ctor = "0.1"
@@ -40,8 +40,8 @@ heck = "0.4"
 [features]
 build = [ "proc-macro2", "quote" ]
 compression = [ "zstd" ]
-schema = ["schemars"]
+schema = [ "schemars" ]
 isolation = [ "aes-gcm", "ring", "once_cell" ]
-process-relaunch-dangerous-allow-symlink-macos = []
+process-relaunch-dangerous-allow-symlink-macos = [ ]
 config-json5 = [ "json5" ]
 resources = [ "glob", "walkdir" ]
