--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-authors = ["Tauri Programme within The Commons Conservancy"]
-categories = ["gui", "web-programming"]
+authors = [ "Tauri Programme within The Commons Conservancy" ]
+categories = [ "gui", "web-programming" ]
 description = "Make tiny, secure apps for all desktop platforms with Tauri"
 edition = "2021"
 rust-version = "1.57"
@@ -9,28 +9,39 @@ exclude = [
   "/.scripts",
   ".license_template",
   "CHANGELOG.md",
-  "/target",
+  "/target"
 ]
 homepage = "https://tauri.studio"
 license = "Apache-2.0 OR MIT"
 name = "tauri"
 readme = "README.md"
 repository = "https://github.com/tauri-apps/tauri"
-version = "1.0.0-beta.8"
+version = "1.0.0-rc.0"
 
 [package.metadata.docs.rs]
 default-features = false
-features = ["compression", "wry", "isolation", "custom-protocol", "api-all", "cli", "updater", "system-tray", "devtools", "dox"]
+features = [
+  "compression",
+  "wry",
+  "isolation",
+  "custom-protocol",
+  "api-all",
+  "cli",
+  "updater",
+  "system-tray",
+  "devtools",
+  "dox"
+]
 rustdoc-args = [ "--cfg", "doc_cfg" ]
 default-target = "x86_64-unknown-linux-gnu"
 targets = [
   "x86_64-pc-windows-msvc",
   "x86_64-unknown-linux-gnu",
-  "x86_64-apple-darwin",
+  "x86_64-apple-darwin"
 ]
 
 [package.metadata.cargo-udeps.ignore]
-normal = ["attohttpc"]
+normal = [ "attohttpc" ]
 
 [dependencies]
 serde_json = { version = "1.0", features = [ "raw_value" ] }
@@ -41,10 +52,10 @@ uuid = { version = "0.8", features = [ "v4" ] }
 url = { version = "2.2" }
 thiserror = "1.0"
 once_cell = "1.9"
-tauri-runtime = { version = "0.2.1", path = "../tauri-runtime" }
-tauri-macros = { version = "1.0.0-beta.5", path = "../tauri-macros" }
-tauri-utils = { version = "1.0.0-beta.3", path = "../tauri-utils" }
-tauri-runtime-wry = { version = "0.2.1", path = "../tauri-runtime-wry", optional = true }
+tauri-runtime = { version = "0.3.0", path = "../tauri-runtime" }
+tauri-macros = { version = "1.0.0-rc.0", path = "../tauri-macros" }
+tauri-utils = { version = "1.0.0-rc.0", path = "../tauri-utils" }
+tauri-runtime-wry = { version = "0.3.0", path = "../tauri-runtime-wry", optional = true }
 rand = "0.8"
 semver = "1.0"
 serde_repr = "0.1"
@@ -85,6 +96,10 @@ glib = "0.15"
 [target."cfg(target_os = \"macos\")".dependencies]
 embed_plist = "1.2"
 
+[target."cfg(windows)".dev-dependencies.windows]
+version = "0.30.0"
+features = [ "Win32_Foundation" ]
+
 [build-dependencies]
 cfg_aliases = "0.1.1"
 
@@ -93,37 +108,34 @@ mockito = "0.30"
 proptest = "1.0.0"
 quickcheck = "1.0.3"
 quickcheck_macros = "1.0.0"
-serde = {version = "1.0", features = ["derive"]}
+serde = { version = "1.0", features = [ "derive" ] }
 serde_json = "1.0"
-tauri = {path = "."}
+tauri = { path = "." }
 tokio-test = "0.4.2"
 tokio = { version = "1.16", features = [ "full" ] }
-
-[target."cfg(windows)".dev-dependencies.windows]
-version = "0.30.0"
-features = [
-  "Win32_Foundation",
-]
 
 [features]
 default = [ "wry", "compression" ]
 compression = [ "tauri-macros/compression", "tauri-utils/compression" ]
-wry = ["tauri-runtime-wry"]
-isolation = ["tauri-utils/isolation", "tauri-macros/isolation"]
-custom-protocol = ["tauri-macros/custom-protocol"]
-updater = ["minisign-verify", "base64", "http-api", "dialog-ask"]
-http-api = ["attohttpc"]
+wry = [ "tauri-runtime-wry" ]
+isolation = [ "tauri-utils/isolation", "tauri-macros/isolation" ]
+custom-protocol = [ "tauri-macros/custom-protocol" ]
+updater = [ "minisign-verify", "base64", "http-api", "dialog-ask" ]
+http-api = [ "attohttpc" ]
 shell-open-api = [ "open", "regex", "tauri-macros/shell-scope" ]
-reqwest-client = ["reqwest", "bytes"]
-command = ["shared_child", "os_pipe"]
-dialog = ["rfd"]
-notification = ["notify-rust"]
-cli = ["clap"]
-system-tray = ["tauri-runtime/system-tray", "tauri-runtime-wry/system-tray"]
-devtools = ["tauri-runtime/devtools", "tauri-runtime-wry/devtools"]
-dox = ["tauri-runtime-wry/dox"]
-macos-private-api = ["tauri-runtime/macos-private-api", "tauri-runtime-wry/macos-private-api"]
-window-data-url = ["data-url"]
+reqwest-client = [ "reqwest", "bytes" ]
+command = [ "shared_child", "os_pipe" ]
+dialog = [ "rfd" ]
+notification = [ "notify-rust" ]
+cli = [ "clap" ]
+system-tray = [ "tauri-runtime/system-tray", "tauri-runtime-wry/system-tray" ]
+devtools = [ "tauri-runtime/devtools", "tauri-runtime-wry/devtools" ]
+dox = [ "tauri-runtime-wry/dox" ]
+macos-private-api = [
+  "tauri-runtime/macos-private-api",
+  "tauri-runtime-wry/macos-private-api"
+]
+window-data-url = [ "data-url" ]
 api-all = [
   "clipboard-all",
   "dialog-all",
@@ -138,15 +150,15 @@ api-all = [
   "shell-all",
   "window-all"
 ]
-clipboard-all = ["clipboard-write-text", "clipboard-read-text"]
-clipboard-read-text = []
-clipboard-write-text = []
-dialog-all = ["dialog-open", "dialog-save", "dialog-message", "dialog-ask"]
-dialog-ask = ["dialog"]
-dialog-confirm = ["dialog"]
-dialog-message = ["dialog"]
-dialog-open = ["dialog"]
-dialog-save = ["dialog"]
+clipboard-all = [ "clipboard-write-text", "clipboard-read-text" ]
+clipboard-read-text = [ ]
+clipboard-write-text = [ ]
+dialog-all = [ "dialog-open", "dialog-save", "dialog-message", "dialog-ask" ]
+dialog-ask = [ "dialog" ]
+dialog-confirm = [ "dialog" ]
+dialog-message = [ "dialog" ]
+dialog-open = [ "dialog" ]
+dialog-save = [ "dialog" ]
 fs-all = [
   "fs-copy-file",
   "fs-create-dir",
@@ -157,30 +169,30 @@ fs-all = [
   "fs-rename-file",
   "fs-write-file"
 ]
-fs-copy-file = []
-fs-create-dir = []
-fs-read-file = []
-fs-read-dir = []
-fs-remove-dir = []
-fs-remove-file = []
-fs-rename-file = []
-fs-write-file = []
-global-shortcut-all = []
-http-all = ["http-request"]
-http-request = ["http-api"]
-notification-all = ["notification", "dialog-ask"]
-os-all = ["os_info"]
-path-all = []
-process-all = ["process-relaunch", "process-exit"]
-process-exit = []
-process-relaunch = []
-process-relaunch-dangerous-allow-symlink-macos = ["tauri-utils/process-relaunch-dangerous-allow-symlink-macos"]
-protocol-all = ["protocol-asset"]
-protocol-asset = []
-shell-all = ["shell-execute", "shell-sidecar", "shell-open"]
-shell-execute = ["command", "regex", "tauri-macros/shell-scope"]
-shell-sidecar = ["command", "regex", "tauri-macros/shell-scope"]
-shell-open = ["shell-open-api"]
+fs-copy-file = [ ]
+fs-create-dir = [ ]
+fs-read-file = [ ]
+fs-read-dir = [ ]
+fs-remove-dir = [ ]
+fs-remove-file = [ ]
+fs-rename-file = [ ]
+fs-write-file = [ ]
+global-shortcut-all = [ ]
+http-all = [ "http-request" ]
+http-request = [ "http-api" ]
+notification-all = [ "notification", "dialog-ask" ]
+os-all = [ "os_info" ]
+path-all = [ ]
+process-all = [ "process-relaunch", "process-exit" ]
+process-exit = [ ]
+process-relaunch = [ ]
+process-relaunch-dangerous-allow-symlink-macos = [ "tauri-utils/process-relaunch-dangerous-allow-symlink-macos" ]
+protocol-all = [ "protocol-asset" ]
+protocol-asset = [ ]
+shell-all = [ "shell-execute", "shell-sidecar", "shell-open" ]
+shell-execute = [ "command", "regex", "tauri-macros/shell-scope" ]
+shell-sidecar = [ "command", "regex", "tauri-macros/shell-scope" ]
+shell-open = [ "shell-open-api" ]
 window-all = [
   "window-create",
   "window-center",
@@ -205,7 +217,7 @@ window-all = [
   "window-set-icon",
   "window-set-skip-taskbar",
   "window-start-dragging",
-  "window-print",
+  "window-print"
 ]
 window-create = [ ]
 window-center = [ ]
@@ -231,8 +243,6 @@ window-set-icon = [ ]
 window-set-skip-taskbar = [ ]
 window-start-dragging = [ ]
 window-print = [ ]
-
-# features unrelated to api/endpoints
 config-json5 = [ "tauri-macros/config-json5" ]
 
 [[example]]
