--- a/tooling/api/package.json
+++ b/tooling/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tauri-apps/api",
-  "version": "1.0.0-beta.8",
+  "version": "1.0.0-rc.0",
   "description": "Tauri API definitions",
   "type": "module",
   "funding": {
