--- a/tooling/bundler/Cargo.toml
+++ b/tooling/bundler/Cargo.toml
@@ -2,7 +2,7 @@ workspace = { }
 
 [package]
 name = "tauri-bundler"
-version = "1.0.0-beta.4"
+version = "1.0.0-rc.0"
 authors = [
   "George Burton <burtonageo@gmail.com>",
   "Tauri Programme within The Commons Conservancy"
@@ -22,7 +22,7 @@ exclude = [
 ]
 
 [dependencies]
-tauri-utils = { version = "1.0.0-beta.3", path = "../../core/tauri-utils", features = [ "resources" ] }
+tauri-utils = { version = "1.0.0-rc.0", path = "../../core/tauri-utils", features = [ "resources" ] }
 ar = "0.9.0"
 icns = "0.3"
 image = "0.24.0"
@@ -52,7 +52,7 @@ hex = "0.4"
 glob = "0.3"
 
 [target."cfg(target_os = \"macos\")".dependencies]
-time = { version = "0.3", features = ["formatting"] }
+time = { version = "0.3", features = [ "formatting" ] }
 dirs-next = "2.0"
 
 [target."cfg(any(target_os = \"macos\", target_os = \"windows\"))".dependencies]
