--- a/tooling/cli/node/test/jest/fixtures/app/src-tauri/Cargo.toml
+++ b/tooling/cli/node/test/jest/fixtures/app/src-tauri/Cargo.toml
@@ -21,13 +21,13 @@ icon = [
 ]
 
 [build-dependencies]
-tauri-build = { path = "../../../../../../../core/tauri-build", features = [] }
+tauri-build = { path = "../../../../../../../../core/tauri-build", features = [] }
 
 [dependencies]
 serde_json = "1.0.79"
 serde = "1.0"
 serde_derive = "1.0"
-tauri = { path = "../../../../../../../core/tauri", features = ["api-all"] }
+tauri = { path = "../../../../../../../../core/tauri", features = ["api-all"] }
 
 [features]
 default = [ "custom-protocol" ]
