--- a/.changes/config.json
+++ b/.changes/config.json
@@ -213,49 +213,34 @@
     "tauri-bundler": {
       "path": "./tooling/bundler",
       "manager": "rust",
-      "dependencies": [
-        "tauri-utils"
-      ]
+      "dependencies": ["tauri-utils"]
     },
     "tauri-runtime": {
       "path": "./core/tauri-runtime",
       "manager": "rust",
-      "dependencies": [
-        "tauri-utils"
-      ],
+      "dependencies": ["tauri-utils"],
       "postversion": "node ../../.scripts/covector/sync-prerelease.js ${ pkg.pkg } ${ release.type }"
     },
     "tauri-runtime-wry": {
       "path": "./core/tauri-runtime-wry",
       "manager": "rust",
-      "dependencies": [
-        "tauri-utils",
-        "tauri-runtime"
-      ],
+      "dependencies": ["tauri-utils", "tauri-runtime"],
       "postversion": "node ../../.scripts/covector/sync-prerelease.js ${ pkg.pkg } ${ release.type }"
     },
     "tauri-codegen": {
       "path": "./core/tauri-codegen",
       "manager": "rust",
-      "dependencies": [
-        "tauri-utils"
-      ]
+      "dependencies": ["tauri-utils"]
     },
     "tauri-macros": {
       "path": "./core/tauri-macros",
       "manager": "rust",
-      "dependencies": [
-        "tauri-codegen",
-        "tauri-utils"
-      ]
+      "dependencies": ["tauri-codegen", "tauri-utils"]
     },
     "tauri-build": {
       "path": "./core/tauri-build",
       "manager": "rust",
-      "dependencies": [
-        "tauri-codegen",
-        "tauri-utils"
-      ],
+      "dependencies": ["tauri-codegen", "tauri-utils"],
       "postversion": "node ../../.scripts/covector/sync-cli-metadata.js ${ pkg.pkg } ${ release.type }"
     },
     "tauri": {
@@ -272,9 +257,7 @@
     "cli.js": {
       "path": "./tooling/cli/node",
       "manager": "javascript",
-      "dependencies": [
-        "cli.rs"
-      ],
+      "dependencies": ["cli.rs"],
       "postversion": "node ../../../.scripts/covector/sync-cli-metadata.js ${ pkg.pkg } ${ release.type }",
       "prepublish": [],
       "publish": [],
@@ -283,10 +266,7 @@
     "cli.rs": {
       "path": "./tooling/cli",
       "manager": "rust",
-      "dependencies": [
-        "tauri-bundler",
-        "tauri-utils"
-      ],
+      "dependencies": ["tauri-bundler", "tauri-utils"],
       "postversion": "cargo check",
       "assets": [
         {
@@ -294,10 +274,6 @@
           "name": "${ pkg.pkg }-${ pkgFile.version }.crate"
         }
       ]
-    },
-    "create-tauri-app": {
-      "path": "./tooling/create-tauri-app",
-      "manager": "javascript"
     },
     "tauri-driver": {
       "path": "./tooling/webdriver",
