--- a/.github/workflows/publish-cli.yml
+++ b/.github/workflows/publish-cli.yml
@@ -28,6 +28,10 @@ jobs:
             build: yarn build
             target: x86_64-pc-windows-msvc
             architecture: x64
+          - host: windows-latest
+            build: yarn build --target i686-pc-windows-msvc
+            target: i686-pc-windows-msvc
+            architecture: x64
           - host: ubuntu-18.04
             target: x86_64-unknown-linux-gnu
             architecture: x64
