--- a/tooling/cli/node/package.json
+++ b/tooling/cli/node/package.json
@@ -31,7 +31,8 @@
         "aarch64-unknown-linux-gnu",
         "aarch64-unknown-linux-musl",
         "armv7-unknown-linux-gnueabihf",
-        "x86_64-unknown-linux-musl"
+        "x86_64-unknown-linux-musl",
+        "i686-pc-windows-msvc"
       ]
     }
   },
