--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -53,10 +53,14 @@ url = { version = "2.2" }
 anyhow = "1.0"
 thiserror = "1.0"
 once_cell = "1.9"
-tauri-runtime = { version = "0.3.2", path = "../tauri-runtime" }
-tauri-macros = { version = "1.0.0-rc.2", path = "../tauri-macros" }
-tauri-utils = { version = "1.0.0-rc.2", path = "../tauri-utils" }
-tauri-runtime-wry = { version = "0.3.2", path = "../tauri-runtime-wry", optional = true }
+tauri-runtime = { version = "0.3.2", git = "https://github.com/lucasfernog/tauri/", branch = "fix/docs" }
+tauri-macros = { version = "1.0.0-rc.2", git = "https://github.com/lucasfernog/tauri/", branch = "fix/docs" }
+tauri-utils = { version = "1.0.0-rc.2", git = "https://github.com/lucasfernog/tauri/", branch = "fix/docs" }
+tauri-runtime-wry = { version = "0.3.2", git = "https://github.com/lucasfernog/tauri/", branch = "fix/docs", optional = true }
+#tauri-runtime = { version = "0.3.2", path = "../tauri-runtime" }
+#tauri-macros = { version = "1.0.0-rc.2", path = "../tauri-macros" }
+#tauri-utils = { version = "1.0.0-rc.2", path = "../tauri-utils" }
+#tauri-runtime-wry = { version = "0.3.2", path = "../tauri-runtime-wry", optional = true }
 rand = "0.8"
 semver = "1.0"
 serde_repr = "0.1"
@@ -117,9 +121,10 @@ tokio-test = "0.4.2"
 tokio = { version = "1.16", features = [ "full" ] }
 
 [features]
-default = [ "wry", "compression" ]
+default = [ "wry", "compression", "objc-exception" ]
 compression = [ "tauri-macros/compression", "tauri-utils/compression" ]
 wry = [ "tauri-runtime-wry" ]
+objc-exception = [ "tauri-runtime-wry/objc-exception" ]
 isolation = [ "tauri-utils/isolation", "tauri-macros/isolation" ]
 __isolation-docs = [ "tauri-utils/__isolation-docs", "tauri-macros/__isolation-docs" ]
 custom-protocol = [ "tauri-macros/custom-protocol" ]
