--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -27,7 +27,7 @@ features = [
   "custom-protocol",
   "api-all",
   "cli",
-  "updater",
+  "__updater-docs",
   "system-tray",
   "devtools",
   "dox"
@@ -53,21 +53,21 @@ url = { version = "2.2" }
 anyhow = "1.0"
 thiserror = "1.0"
 once_cell = "1.9"
-tauri-runtime = { version = "0.3.2", git = "https://github.com/lucasfernog/tauri/", branch = "fix/docs" }
-tauri-macros = { version = "1.0.0-rc.2", git = "https://github.com/lucasfernog/tauri/", branch = "fix/docs" }
-tauri-utils = { version = "1.0.0-rc.2", git = "https://github.com/lucasfernog/tauri/", branch = "fix/docs" }
-tauri-runtime-wry = { version = "0.3.2", git = "https://github.com/lucasfernog/tauri/", branch = "fix/docs", optional = true }
-#tauri-runtime = { version = "0.3.2", path = "../tauri-runtime" }
-#tauri-macros = { version = "1.0.0-rc.2", path = "../tauri-macros" }
-#tauri-utils = { version = "1.0.0-rc.2", path = "../tauri-utils" }
-#tauri-runtime-wry = { version = "0.3.2", path = "../tauri-runtime-wry", optional = true }
+#tauri-runtime = { version = "0.3.2", git = "https://github.com/lucasfernog/tauri/", branch = "fix/docs" }
+#tauri-macros = { version = "1.0.0-rc.2", git = "https://github.com/lucasfernog/tauri/", branch = "fix/docs" }
+#tauri-utils = { version = "1.0.0-rc.2", git = "https://github.com/lucasfernog/tauri/", branch = "fix/docs" }
+#tauri-runtime-wry = { version = "0.3.2", git = "https://github.com/lucasfernog/tauri/", branch = "fix/docs", optional = true }
+tauri-runtime = { version = "0.3.2", path = "../tauri-runtime" }
+tauri-macros = { version = "1.0.0-rc.2", path = "../tauri-macros" }
+tauri-utils = { version = "1.0.0-rc.2", path = "../tauri-utils" }
+tauri-runtime-wry = { version = "0.3.2", path = "../tauri-runtime-wry", optional = true }
 rand = "0.8"
 semver = "1.0"
 serde_repr = "0.1"
 state = "0.5"
 tar = "0.4"
 tempfile = "3"
-zip = "0.5"
+zip = { version = "0.5", optional = true }
 ignore = "0.4"
 either = "1.6"
 flate2 = "1.0"
@@ -128,9 +128,11 @@ objc-exception = [ "tauri-runtime-wry/objc-exception" ]
 isolation = [ "tauri-utils/isolation", "tauri-macros/isolation" ]
 __isolation-docs = [ "tauri-utils/__isolation-docs", "tauri-macros/__isolation-docs" ]
 custom-protocol = [ "tauri-macros/custom-protocol" ]
-updater = [ "minisign-verify", "base64", "http-api", "dialog-ask" ]
+updater = [ "minisign-verify", "base64", "http-api", "dialog-ask", "fs-extract-api" ]
+__updater-docs = [ "minisign-verify", "base64", "http-api", "dialog-ask" ]
 http-api = [ "attohttpc" ]
 shell-open-api = [ "open", "regex", "tauri-macros/shell-scope" ]
+fs-extract-api = [ "zip" ]
 reqwest-client = [ "reqwest", "bytes" ]
 command = [ "shared_child", "os_pipe", "memchr" ]
 dialog = [ "rfd" ]
