--- a/tooling/bundler/Cargo.toml
+++ b/tooling/bundler/Cargo.toml
@@ -26,6 +26,7 @@ tauri-utils = { version = "1.0.0-rc.2", path = "../../core/tauri-utils", feature
 ar = "0.9.0"
 icns = "0.3"
 image = "0.24.1"
+png = "=0.17.3"
 libflate = "1.1"
 md5 = "0.7.0"
 anyhow = "1.0"
