--- a/core/tauri-codegen/Cargo.toml
+++ b/core/tauri-codegen/Cargo.toml
@@ -26,6 +26,8 @@ walkdir = "2"
 zstd = { version = "0.10", optional = true }
 regex = { version = "1", optional = true }
 uuid = { version = "0.8", features = [ "v4" ] }
+png = "0.16"
+ico = "0.1"
 
 [features]
 default = [ "compression" ]
