--- a/core/tauri-codegen/Cargo.toml
+++ b/core/tauri-codegen/Cargo.toml
@@ -26,8 +26,12 @@ walkdir = "2"
 zstd = { version = "0.10", optional = true }
 regex = { version = "1", optional = true }
 uuid = { version = "0.8", features = [ "v4" ] }
-png = "0.16"
+
+[target."cfg(windows)".dependencies]
 ico = "0.1"
+
+[target."cfg(not(windows))".dependencies]
+png = "0.16"
 
 [features]
 default = [ "compression" ]
