--- a/core/tauri-codegen/Cargo.toml
+++ b/core/tauri-codegen/Cargo.toml
@@ -15,7 +15,6 @@ readme = "README.md"
 [dependencies]
 sha2 = "0.10"
 base64 = "0.13"
-blake3 = { version = "1.3", features = [ "rayon" ] }
 proc-macro2 = "1"
 quote = "1"
 serde = { version = "1", features = [ "derive" ] }
@@ -23,7 +22,7 @@ serde_json = "1"
 tauri-utils = { version = "1.0.0-rc.3", path = "../tauri-utils", features = [ "build" ] }
 thiserror = "1"
 walkdir = "2"
-zstd = { version = "0.11", optional = true }
+brotli = { version = "3", optional = true, default-features = false, features = ["std"] }
 regex = { version = "1.5.5", optional = true }
 uuid = { version = "0.8", features = [ "v4" ] }
 
@@ -35,8 +34,7 @@ png = "0.17"
 
 [features]
 default = [ "compression" ]
-compression = [ "zstd", "tauri-utils/compression" ]
+compression = [ "brotli", "tauri-utils/compression" ]
 isolation = [ "tauri-utils/isolation" ]
-__isolation-docs = [ "tauri-utils/__isolation-docs" ]
 shell-scope = [ "regex" ]
 config-json5 = [ "tauri-utils/config-json5" ]
