--- a/core/tauri-utils/Cargo.toml
+++ b/core/tauri-utils/Cargo.toml
@@ -16,7 +16,7 @@ serde = { version = "1.0", features = [ "derive" ] }
 serde_json = "1.0"
 thiserror = "1.0.30"
 phf = { version = "0.10", features = [ "macros" ] }
-zstd = { version = "0.11", optional = true }
+brotli = { version = "3", optional = true, default-features = false, features = ["std"] }
 url = { version = "2.2", features = [ "serde" ] }
 kuchiki = "0.8"
 html5ever = "0.25"
@@ -25,8 +25,7 @@ quote = { version = "1.0", optional = true }
 schemars = { version = "0.8", features = [ "url" ], optional = true }
 serde_with = "1.12"
 aes-gcm = { version = "0.9", optional = true }
-ring = { version = "0.16", optional = true, features = [ "std" ] }
-once_cell = { version = "1.10", optional = true }
+getrandom = { version = "0.2", optional = true, features = [ "std" ] }
 serialize-to-javascript = "=0.1.1"
 ctor = "0.1"
 json5 = { version = "0.4", optional = true }
@@ -39,10 +38,9 @@ heck = "0.4"
 
 [features]
 build = [ "proc-macro2", "quote" ]
-compression = [ "zstd" ]
+compression = [ "brotli" ]
 schema = [ "schemars" ]
-isolation = [ "aes-gcm", "ring", "once_cell" ]
-__isolation-docs = [ "aes-gcm", "once_cell" ]
+isolation = [ "aes-gcm", "getrandom" ]
 process-relaunch-dangerous-allow-symlink-macos = [ ]
 config-json5 = [ "json5" ]
 resources = [ "glob", "walkdir" ]
