--- a/core/tauri-runtime-wry/Cargo.toml
+++ b/core/tauri-runtime-wry/Cargo.toml
@@ -13,7 +13,7 @@ exclude = [ ".license_template", "CHANGELOG.md", "/target" ]
 readme = "README.md"
 
 [dependencies]
-wry = { version = "0.13.3", default-features = false, features = [ "file-drop", "protocol" ] }
+wry = { version = "0.14", default-features = false, features = [ "file-drop", "protocol" ] }
 tauri-runtime = { version = "0.3.3", path = "../tauri-runtime" }
 tauri-utils = { version = "1.0.0-rc.3", path = "../tauri-utils" }
 uuid = { version = "0.8.2", features = [ "v4" ] }
@@ -31,7 +31,7 @@ gtk = { version = "0.15", features = [ "v3_20" ] }
 
 [features]
 dox = [ "wry/dox" ]
-devtools = [ "wry/devtool", "tauri-runtime/devtools" ]
+devtools = [ "wry/devtools", "tauri-runtime/devtools" ]
 system-tray = [ "wry/tray", "tauri-runtime/system-tray" ]
 macos-private-api = [
   "wry/fullscreen",
